# empdfer

./: CMakeLists.txt  CMakelists.txt  Makefile  README.md  adjust_size.cpp  adjust_size.h  create_page.cpp  create_page.h  empdfer.cpp  file_type.cpp  file_type.h  jpeg.cpp  jpeg.h  jpeg_file.cpp  jpeg_file.h  matrix.cpp  matrix.h  png_file.cpp  png_file.h  version.cpp  version.h
cmake/Modules/: FindPaddlefish.cmake
snap/: snapcraft.yaml
